--- a/zmpp/build.properties
+++ b/zmpp/build.properties
@@ -7,6 +7,6 @@ reports.tests = target/testreports
 instrumented.dir = target/instrumented
 coveragereport.dir = target/coberturareports
 
-cobertura.home = /usr/local/anarchy/cobertura-1.6
-junit.home = /usr/local/anarchy/junit3.8.1
-checkstyle.path = /usr/local/anarchy/checkstyle-4.0/checkstyle-all-4.0.jar
+cobertura.home = /usr/local/cobertura-1.7
+junit.home = /usr/local/junit3.8.1
+checkstyle.path = /usr/local/checkstyle-4.0/checkstyle-all-4.0.jar
