--- a/zmpp/.classpath
+++ b/zmpp/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry sourcepath="ECLIPSE_HOME/plugins/org.eclipse.jdt.source_3.0.0/src/org.junit_3.8.1/junitsrc.zip" kind="var" path="JUNIT_HOME/junit.jar"/>
 	<classpathentry kind="lib" path="lib/jmock-SNAPSHOT.jar"/>
+	<classpathentry kind="con" path="com.omondo.uml.CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
