--- a/zmpp/build.xml
+++ b/zmpp/build.xml
@@ -31,7 +31,7 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac debug="on" srcdir="${src.prj}" destdir="${build.prj}"/>
+    <javac debug="off" srcdir="${src.prj}" destdir="${build.prj}"/>
     <!--
     <javac debug="on" srcdir="${src.tests}" destdir="${build.tests}">
       <classpath>
