--- a/zmpp/build.properties
+++ b/zmpp/build.properties
@@ -7,7 +7,6 @@ dist = target/dist
 reports.tests = target/testreports
 instrumented.dir = target/instrumented
 coveragereport.dir = target/coberturareports
-
-cobertura.home = /usr/local/cobertura-1.7
-junit.home = /usr/local/junit3.8.1
-checkstyle.path = /usr/local/checkstyle-4.0/checkstyle-all-4.0.jar
+pmdreport.dir = target/pmdreports
+jdepend.dir = target/jdepend
+checkstyle.path = lib
