updated for release 0.92
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@505 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/build.xml
+++ b/zmpp/build.xml
@@ -36,8 +36,8 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac debug="on" srcdir="${src.prj}" destdir="${build.prj}"/>
-    <javac debug="on" srcdir="${src.tests}" destdir="${build.tests}">
+    <javac debug="off" srcdir="${src.prj}" destdir="${build.prj}"/>
+    <javac debug="off" srcdir="${src.tests}" destdir="${build.tests}">
       <classpath>
   			<pathelement location="${build.prj}"/>
   	  </classpath>
