--- a/zmpp/build.xml
+++ b/zmpp/build.xml
@@ -36,8 +36,8 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac debug="off" srcdir="${src.prj}" destdir="${build.prj}"/>
-    <javac debug="off" srcdir="${src.tests}" destdir="${build.tests}">
+    <javac debug="off" srcdir="${src.prj}" destdir="${build.prj}" source="1.5" target="1.5" />
+    <javac debug="off" srcdir="${src.tests}" destdir="${build.tests}" source="1.5" target="1.5">
       <classpath>
   			<pathelement location="${build.prj}"/>
   	  </classpath>
