added a project environment for Netbeans, fixed issue reported by Fredrik Ramsberg: Cursor was not displayed if no input prompt was printed
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@513 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing/build.xml
+++ b/zmpp-swing/build.xml
@@ -31,7 +31,7 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac debug="off" srcdir="${src.prj}" destdir="${build.prj}">
+    <javac debug="off" srcdir="${src.prj}" destdir="${build.prj}" source="1.5" target="1.5">
       <classpath>
   			<pathelement location="${build.prj}"/>
   			<pathelement location="${zmpp.core}"/>
@@ -125,5 +125,14 @@
   <target name="clean">
     <delete dir="target"/>
     <delete file="cobertura.ser"/>
+  </target>
+  
+    <target name="run" depends="compile">
+    <java classname="org.zmpp.swingui.Main" fork="true">
+      <classpath>
+        <pathelement location="${build.prj}"/>
+  	<pathelement location="${zmpp.core}"/>
+      </classpath>
+    </java>    
   </target>
 </project>
