--- a/zmpp/build.xml
+++ b/zmpp/build.xml
@@ -36,11 +36,11 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac debug="off" srcdir="${src.prj}" destdir="${build.prj}" source="1.5" target="1.5" />
-    <javac debug="off" srcdir="${src.tests}" destdir="${build.tests}" source="1.5" target="1.5">
+    <javac debug="on" srcdir="${src.prj}" destdir="${build.prj}" source="1.5" target="1.5" />
+    <javac debug="on" srcdir="${src.tests}" destdir="${build.tests}" source="1.5" target="1.5">
       <classpath>
-  			<pathelement location="${build.prj}"/>
-  	  </classpath>
+  	<pathelement location="${build.prj}"/>
+      </classpath>
       <classpath refid="junit.path" />
     </javac>
   </target>
