--- a/zmpp/build.xml
+++ b/zmpp/build.xml
@@ -13,7 +13,7 @@
   
   <path id="junit.path">
     <fileset dir="lib">
-      <include name="junit.jar"/>
+      <include name="junit-4.0.jar"/>
       <include name="jmock-SNAPSHOT.jar"/>
     </fileset>
   </path>
