distribution now includes language property files, support for german interface added
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@538 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing/build.properties
+++ b/zmpp-swing/build.properties
@@ -1,6 +1,7 @@
 app.version = 1.0-beta
 src.prj = src/java
 src.tests = src/test
+resources = resources
 zmpp.core = ../zmpp/target/classes
 build.prj = target/classes
 build.tests = target/testclasses
