--- a/zmpp-swing/resources/zmpp_messages.properties
+++ b/zmpp-swing/resources/zmpp_messages.properties
@@ -23,3 +23,27 @@ menu.help.aboutgame.name = About this game...
 
 dialog.about.title = About ZMPP...
 dialog.about.msg = \n\u00a9 2005-2008 by Wei-ju Wu\nThis software is released under the GNU public license.
+
+dialog.settranscript.title = Set transcript file...
+dialog.setinput.title = Set input stream file...
+
+dialog.prefs.title = Preferences...
+
+caption.about = About
+caption.ok = Ok
+caption.cancel = Cancel
+caption.black = Black
+caption.red = Red
+caption.green = Green
+caption.yellow = Yellow
+caption.blue = Blue
+caption.magenta = Magenta
+caption.cyan = Cyan
+caption.white = White
+caption.darkgray = Dark Gray
+caption.stdfont.size = Size of standard font:
+caption.fixedfont.size = Size of fixed font:
+caption.default.background = Default background:
+caption.default.foreground = Default foreground:
+caption.antialias = Antialiased Text:
+caption.restarttochange = <html><body><i>(Note: Changes only take effect after a restart)</i></body></html>
