slight fixes for 1.0 release
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@542 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing/resources/zmpp_messages.properties
+++ b/zmpp-swing/resources/zmpp_messages.properties
@@ -1,9 +1,9 @@
 app.name = Z-Machine Preservation Project Version 1.0
 dialog.open.msg = Open story file...
-error.open.msg = Could not read game.\nReason: '{0}'
+error.open.msg = Could not read game.\nReason: \"{0}\"
 error.open.title = Story file error
 error.notfound.title = Story file not found
-error.notfound.msg = The selected story file '{0}' was not found
+error.notfound.msg = The selected story file \"{0}\" was not found
 
 menu.file.name = File
 menu.file.mnemonic = F
