transcript dialog cancellation does not lead to exception anymore, url loading in application
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@548 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing/resources/zmpp_messages.properties
+++ b/zmpp-swing/resources/zmpp_messages.properties
@@ -1,4 +1,4 @@
-app.name = Z-Machine Preservation Project Version 1.0
+app.name = Z-Machine Preservation Project Version 1.01
 dialog.open.msg = Open story file...
 error.open.msg = Could not read game.\nReason: \"{0}\"
 error.open.title = Story file error
@@ -23,6 +23,9 @@ menu.help.aboutgame.name = About this game...
 
 dialog.about.title = About ZMPP...
 dialog.about.msg = \n\u00a9 2005-2008 by Wei-ju Wu\nThis software is released under the GNU public license.
+
+dialog.savegame.title = Save game...
+dialog.restoregame.title = Restore game...
 
 dialog.settranscript.title = Set transcript file...
 dialog.setinput.title = Set input stream file...
