--- a/zmpp-swing/resources/zmpp_messages.properties
+++ b/zmpp-swing/resources/zmpp_messages.properties
@@ -1,4 +1,4 @@
-app.name = Z-Machine Preservation Project Version 1.01
+app.name = Z-Machine Preservation Project Version 1.02
 dialog.open.msg = Open story file...
 error.open.msg = Could not read game.\nReason: \"{0}\"
 error.open.title = Story file error
@@ -22,7 +22,7 @@ menu.help.about.mnemonic = A
 menu.help.aboutgame.name = About this game...
 
 dialog.about.title = About ZMPP...
-dialog.about.msg = \n\u00a9 2005-2008 by Wei-ju Wu\nThis software is released under the GNU public license.
+dialog.about.msg = \n\u00A9 2005-2008 by Wei-ju Wu\nThis software is released under the GNU public license.
 
 dialog.savegame.title = Save game...
 dialog.restoregame.title = Restore game...
