finally got rid of GameData
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@603 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/build.properties
+++ b/zmpp/build.properties
@@ -10,4 +10,4 @@ coveragereport.dir = target/coberturareports
 pmdreport.dir = target/pmdreports
 jdepend.dir = target/jdepend
 checkstyle.path = lib
-build.debug = off
+build.debug = on
