--- a/zmpp/build.properties
+++ b/zmpp/build.properties
@@ -11,3 +11,5 @@ pmdreport.dir = target/pmdreports
 jdepend.dir = target/jdepend
 checkstyle.path = lib
 build.debug = on
+findbugs.home=/Users/weiju/Development/findbugs-1.3.4
+pmd.home=/Users/weiju/Development/pmd-4.2.2
