changed PMD ant task
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@608 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/build.xml
+++ b/zmpp/build.xml
@@ -113,8 +113,8 @@
       <taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask"
                classpathref="pmd.classpath"/>
       <pmd targetjdk="1.5">
-        <ruleset>rulesets/zmpp_all.xml</ruleset>
-        <formatter type="html" toFile="${pmdreport.dir}/pmd_report.html" />
+        <ruleset>basic</ruleset>
+        <formatter type="xml" toFile="${pmdreport.dir}/pmd_report.xml" />
         <fileset dir="${src.prj}">
          <include name="**/*.java"/>
         </fileset>
