corrected color issue: setting foreground and background affects both windows
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@609 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing2/build.xml
+++ b/zmpp-swing2/build.xml
@@ -11,7 +11,7 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac debug="on" srcdir="${src.prj}" destdir="${build.prj}" source="1.5" target="1.5">
+    <javac debug="${build.debug}" srcdir="${src.prj}" destdir="${build.prj}" source="1.5" target="1.5">
       <classpath>
         <pathelement location="${zmpp.core}"/>
       </classpath>
