load files from dialog, added resource file
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@629 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing2/build.properties
+++ b/zmpp-swing2/build.properties
@@ -1,6 +1,7 @@
 app.version = 1.00
 src.prj = src/java
 build.prj = target/classes
+build.debug = on
 dist = target/dist
 zmpp.core = ../zmpp/target/classes
-
+resources = resources
