--- a/zmpp/build.xml
+++ b/zmpp/build.xml
@@ -65,7 +65,8 @@
   
   <target name="test" depends="instrument">
     <mkdir dir="${reports.tests}"/> 
-    <junit printsummary="yes" haltonfailure="yes" dir="${basedir}">
+    <!-- showoutput to true for NetBeans integration -->
+    <junit printsummary="yes" haltonfailure="yes" showoutput="true" dir="${basedir}">
       <sysproperty key="net.sourceforge.cobertura.datafile"
                     file="${basedir}/cobertura.ser" />
       <classpath refid="cobertura.path" />
@@ -75,6 +76,8 @@
         <pathelement location="${build.prj}"/>
         <pathelement location="${build.tests}"/>
       </classpath>
+      <!-- usefile false formatter for NetBeans integration -->
+      <formatter usefile="false" type="brief" />
       <formatter type="xml" />
       <batchtest fork="yes" todir="${reports.tests}">
         <fileset dir="${src.tests}">
