--- a/zmpp/build.properties
+++ b/zmpp/build.properties
@@ -11,5 +11,6 @@ pmdreport.dir = target/pmdreports
 jdepend.dir = target/jdepend
 checkstyle.path = lib
 build.debug = on
+# Tools that are not absolutely necessary for build
 findbugs.home=/Users/weiju/Development/java/findbugs-1.3.4
 pmd.home=/Users/weiju/Development/pmd-4.2.2
