--- a/zmpp/build.xml
+++ b/zmpp/build.xml
@@ -13,10 +13,11 @@
   
   <path id="junit.path">
     <fileset dir="lib">
-      <include name="junit-4.0.jar"/>
-      <include name="jmock-core-1.2.0.jar"/>
-      <include name="jmock-cglib-1.2.0.jar"/>
-      <include name="cglib-nodep-2.1_3.jar"/>
+      <include name="junit-4.4.jar"/>
+      <include name="jmock-2.5.0.jar"/>
+      <include name="jmock-junit4-2.5.0.jar"/>
+      <include name="hamcrest-core-1.1.jar"/>
+      <include name="hamcrest-library-1.1.jar"/>
     </fileset>
   </path>
 
@@ -49,7 +50,7 @@
     <javac debug="${build.debug}" srcdir="${src.prj}" destdir="${build.prj}" source="1.5" target="1.5" />
     <javac debug="${build.debug}" srcdir="${src.tests}" destdir="${build.tests}" source="1.5" target="1.5">
       <classpath>
-    <pathelement location="${build.prj}"/>
+        <pathelement location="${build.prj}"/>
       </classpath>
       <classpath refid="junit.path" />
     </javac>
