all tests working again
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@666 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/build.xml
+++ b/zmpp/build.xml
@@ -58,7 +58,7 @@
         <pathelement location="${build.prj}"/>
       </classpath>
       <classpath refid="junit.path" />
-       <!--
+      <!--
       <include name="**/base/*.java" />
       <include name="**/iff/*.java" />
       -->
@@ -134,7 +134,7 @@
      </pmd>
   </target>
 
-  <target name="dist" depends="test"
+  <target name="dist" depends="compile"
         description="generate the distribution" >
     <mkdir dir="${dist}"/>
     <mkdir dir="${dist}/lib"/>
