--- a/zmpp/build.properties
+++ b/zmpp/build.properties
@@ -1,4 +1,4 @@
-app.version = 1.01
+app.version = 1.5
 src.prj = src/java
 src.tests = src/test
 build.prj = target/classes
@@ -7,10 +7,10 @@ dist = target/dist
 reports.tests = target/testreports
 instrumented.dir = target/instrumented
 coveragereport.dir = target/coberturareports
-pmdreport.dir = target/pmdreports
 jdepend.dir = target/jdepend
 checkstyle.path = lib
 build.debug = on
+#build.debug = off
 # Tools that are not absolutely necessary for build
 findbugs.home=/Users/weiju/Development/java/findbugs-1.3.4
-pmd.home=/Users/weiju/Development/pmd-4.2.2
+pmd.home=/Users/weiju/Development/java/pmd-4.2.2
