--- a/zmpp/build.properties
+++ b/zmpp/build.properties
@@ -14,3 +14,6 @@ build.debug = on
 # Tools that are not absolutely necessary for build
 findbugs.home=/Users/weiju/Development/java/findbugs-1.3.4
 pmd.home=/Users/weiju/Development/java/pmd-4.2.2
+javancss.home=/Users/weiju/Development/java/javancss29.50
+jdepend.home=/Users/weiju/Development/java/jdepend-2.9
+
