--- a/zmpp/build.xml
+++ b/zmpp/build.xml
@@ -5,12 +5,12 @@
   <!-- set global properties for this build -->  
   <property file="build.properties" />
   
+  <!-- Tool classpaths -->
   <path id="cobertura.path">
     <fileset dir="lib">
       <include name="**/*.jar"/>
     </fileset>
   </path>
-  
   <path id="junit.path">
     <fileset dir="lib">
       <include name="junit-4.4.jar"/>
@@ -20,13 +20,16 @@
       <include name="hamcrest-library-1.1.jar"/>
     </fileset>
   </path>
-
   <path id="pmd.classpath">
     <fileset dir="${pmd.home}/lib">
       <include name="*.jar"/>
     </fileset>
   </path>
-
+  <path id="javancss.classpath">
+    <fileset dir="${javancss.home}/lib">
+      <include name="*.jar"/>
+    </fileset>
+  </path>
   <path id="findbugs.classpath">
     <fileset dir="${findbugs.home}/lib">
       <include name="*.jar"/>
@@ -106,8 +109,7 @@
   </target>
 
   <target name="jdepend">
-    <mkdir dir="${jdepend.dir}"/>
-    <jdepend outputfile="${jdepend.dir}/jdepend-report.txt">
+    <jdepend outputfile="target/jdepend-report.txt">
       <exclude name="java.*"/>
       <exclude name="javax.*"/>
       <exclude name="org.xml.*"/>
@@ -116,7 +118,9 @@
       </classespath>
       <classpath>
         <pathelement location="${build.prj}" />
+	<!--
         <pathelement location="lib/jdepend-2.9.jar" />
+	-->
       </classpath>
     </jdepend>
   </target>  
@@ -131,6 +135,16 @@
          <include name="**/*.java"/>
         </fileset>
      </pmd>
+  </target>
+  <target name="ncss">
+    <taskdef name="javancss"
+             classname="javancss.JavancssAntTask"
+	     classpathref="javancss.classpath"/>
+    <javancss srcdir="${src.prj}"
+              excludes="**/*.html"
+              generateReport="true"
+	      outputfile="target/javancss_metrics.txt"
+	      format="plain"/>
   </target>
 
   <target name="dist" depends="compile"
@@ -147,7 +161,7 @@
     </findbugs>
   </target>
 
-  <target name="build-all" depends="findbugs,testreport,pmd">
+  <target name="build-all" depends="findbugs,testreport,pmd,ncss,jdepend">
   </target>
   
 
