--- a/zmpp-swing2/resources/zmpp_messages.properties
+++ b/zmpp-swing2/resources/zmpp_messages.properties
@@ -7,6 +7,8 @@ error.notfound.msg = The selected story file \"{0}\" was not found
 
 menu.file.name = File
 menu.file.mnemonic = F
+menu.file.open.name = Open...
+menu.file.open.mnemonic = O
 menu.file.quit.name = Quit
 menu.file.quit.mnemonic = Q
 
