Open story file text made equal to dialog caption
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@715 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing2/resources/zmpp_messages.properties
+++ b/zmpp-swing2/resources/zmpp_messages.properties
@@ -7,7 +7,7 @@ error.notfound.msg = The selected story file \"{0}\" was not found
 
 menu.file.name = File
 menu.file.mnemonic = F
-menu.file.open.name = Open...
+menu.file.open.name = Open story file...
 menu.file.open.mnemonic = O
 menu.file.quit.name = Quit
 menu.file.quit.mnemonic = Q
