added ignore rules
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@730 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing2/build.xml
+++ b/zmpp-swing2/build.xml
@@ -24,7 +24,7 @@
     <jar jarfile="${dist}/zmpp-${app.version}.jar" index="true" basedir="${build.prj}">
       <manifest>
       	<attribute name="Built-By" value="Wei-ju Wu"/>
-        <attribute name="Main-Class" value="org.zmpp.swingui2.Main"/>
+        <attribute name="Main-Class" value="org.zmpp.swingui.app.Main"/>
       </manifest>
       <fileset dir="${zmpp.core}" />
       <fileset dir="${resources}" />
