--- a/zmpp-swing/pom.xml
+++ b/zmpp-swing/pom.xml
@@ -73,13 +73,28 @@
             <target>1.5</target>
           </configuration>
         </plugin>
-      	<plugin>
+	<!-- Assembly: jar-with-dependencies -->
+	<plugin>
+	  <groupId>org.apache.maven.plugins</groupId>
 	  <artifactId>maven-assembly-plugin</artifactId>
+	  <version>2.2-beta-4</version>
 	  <configuration>
-	    <descriptors>
-	      <descriptor>assembly.xml</descriptor>
-	    </descriptors>
+	    <descriptorRefs>
+	      <descriptorRef>jar-with-dependencies</descriptorRef>
+	    </descriptorRefs>
+	    <archive>
+	      <manifest>
+		<mainClass>org.zmpp.swingui.app.Main</mainClass>
+	      </manifest>
+	    </archive>
 	  </configuration>
+	  <executions>
+	    <execution>
+	      <id>make-assembly</id>
+	      <phase>package</phase>
+	      <goals><goal>single</goal></goals>
+	    </execution>
+	  </executions>
 	</plugin>
       </plugins>
     </pluginManagement>
